--- a/px4_roscon_25/arva_master/cfg/terrain_follow.yaml
+++ b/px4_roscon_25/arva_master/cfg/terrain_follow.yaml
@@ -1,10 +1,10 @@
 terrain_follow_controller:
   ros__parameters:
-    target_distance: 1.25
+    target_distance: 2.0
     kp: 2.75
     ki: 0.2
     kd: 0.05
     max_vel: 3.0
     min_vel: -3.0
     integrator_limit: 1.0
-    compensate_angle: false
+    compensate_angle: true
