--- a/px4_roscon_25/arva_master/cfg/terrain_follow.yaml
+++ b/px4_roscon_25/arva_master/cfg/terrain_follow.yaml
@@ -7,4 +7,4 @@ terrain_follow_controller:
     max_vel: 3.0
     min_vel: -3.0
     integrator_limit: 1.0
-    compensate_angle: true
+    compensate_angle: false
